# helperScripts

./: .evn  .gitignore  README.md  pyproject.toml  pyproject.toml.bak.poetry2uv  pyproject.uv.toml
src/helperscripts/: get_github_banner_url.py  insert_cover_pages_readable.sql  insert_cover_pages_single.sql  organize_config.py  send_html_email.py  setup_matrix.py
src/helperscripts/html/: email.html
