[tool.poetry]
name = "helperScripts"
version = "0.1.0"
description = "General-purpose Python utilities for the matrix project."
authors = ["Suhail <suhailece@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "helperscripts", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
keyring = "^25.5.0"
jinja2 = "^3.1.4"
python-dotenv = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
