[project]
name = "helperScripts"
version = "0.1.0"
description = "General-purpose Python utilities for the matrix project."
readme = "README.md"
requires-python = ">=3.11,<4.0"
license = { text = "MIT" }
keywords = []
classifiers = []
dependencies = [
  "jinja2 >=3.1.4,<4.0.0",
  "keyring >=25.5.0,<26.0.0",
  "python-dotenv >=1.0.1,<2.0.0",
]


[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
  "src/helperscripts",
]
